# octo_car_model

./: CMakeLists.txt  README.md  package.xml
include/: RobotModel.h
launch/: robot_drive.launch
msg/: data_result.msg  path_result.msg
plot/: heading_cross_track.xml
scripts/: MPC.py
src/: CubicSpline2D.cpp  MPCModel.cpp  RobotDynamicModel.cpp  RobotKinematicModel.cpp  RobotModel.cpp  main.cpp
